# win-alias

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
