[project]
name = "win-alias"
version = "1.0.0"
description = "A simple CLI tool to create Windows aliases."
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.1",
]

[project.scripts]
win-alias = "win_alias:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
